--- a/scss/_component.scss
+++ b/scss/_component.scss
@@ -1,17 +1,140 @@
-.attribution {
-  color: #000;
-  font-size: 1rem;
-  text-align: center;
-  margin: 2rem 0 1rem 0;
+.content {
+  padding: 1rem 1rem;
 
-  &__link:link,
-  &__link:visited {
-    //   color: $color-tertiary--light;
-    text-transform: uppercase;
-    transition: all 0.2s;
+  &__wrapper {
+    text-align: center;
+    @media (min-width: 1140px) {
+      display: flex;
+    }
   }
 
-  &__link:hover,
-  &__link:active {
+  &__text {
+    @media (min-width: 1140px) {
+      width: 50%;
+    }
+  }
+
+  &__heading {
+    color: $color-primary--dark;
+    padding: 0 2rem;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+    font-weight: 700;
+    font-size: 2.95rem;
+    line-height: 3rem;
+  }
+
+  &__paragraph {
+    color: $color-primary--light;
+    font-weight: 400;
+    font-size: 1.4rem;
+    line-height: 2.5rem;
+  }
+
+  &__reviews {
+    margin: 5rem 0;
+    @media (min-width: 1140px) {
+      width: 50%;
+    }
+  }
+
+  &__review {
+    background-color: $color-secondary;
+    margin-bottom: 2rem;
+    padding: 1.5rem 0;
+    border-radius: 1rem;
+    @media (min-width: 1140px) {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 70%;
+    }
+  }
+
+  &__stars {
+    padding-bottom: 1rem;
+    @media (min-width: 1140px) {
+      padding-bottom: 0;
+      margin-right: 2rem;
+    }
+  }
+
+  &__star {
+    margin-right: 0.4rem;
+  }
+
+  &__review-text {
+    color: $color-primary--dark;
+    font-size: 1.3rem;
+    font-weight: 700;
+  }
+
+  &__cards {
+    @media (min-width: 1440px) {
+      display: flex;
+    }
+  }
+
+  &__card {
+    background-color: $color-primary--dark;
+    margin-bottom: 2rem;
+    border-radius: 1rem;
+    padding: 3rem;
+    @media (min-width: 1140px) {
+      margin-right: 1rem;
+    }
+    &-author {
+      display: flex;
+      justify-content: flex-start;
+      align-items: center;
+      margin-bottom: 2rem;
+    }
+
+    &-picture {
+      border-radius: 50%;
+      margin-right: 2rem;
+      width: 4rem;
+    }
+  }
+
+  &__fullname {
+  }
+
+  &__name {
+    color: $color-secondary--light;
+    font-size: 1.2rem;
+    font-weight: 700;
+    margin-bottom: 0.4rem;
+  }
+
+  &__buyer {
     color: $color-primary;
+    font-size: 1.2rem;
+    opacity: 0.7;
+  }
+
+  &__message {
+    color: $color-secondary;
+    font-size: 1.3rem;
+    line-height: 2.3rem;
+  }
+
+  .attribution {
+    color: #000;
+    font-size: 1rem;
+    text-align: center;
+    margin: 2rem 0 1rem 0;
+
+    &__link:link,
+    &__link:visited {
+      //   color: $color-tertiary--light;
+      text-transform: uppercase;
+      transition: all 0.2s;
+    }
+
+    &__link:hover,
+    &__link:active {
+      color: $color-primary;
+    }
+  }
 }
