--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -4,17 +4,6 @@ $color-primary--dark: hsl(300, 43%, 22%);
 $color-secondary: hsl(300, 24%, 96%);
 $color-secondary--light: hsl(0, 0%, 100%);
 
-$font-primary: "Spartan", sans-serif;
-
-// Very Dark Magenta: hsl(300, 43%, 22%)
-// Soft Pink: hsl(333, 80%, 67%)
-
-// ### Neutral
-
-// Dark Grayish Magenta: hsl(303, 10%, 53%)
-// Light Grayish Magenta: hsl(300, 24%, 96%)
-// White: hsl(0, 0%, 100%)
-
 *,
 *::before,
 *::after {
@@ -30,4 +19,14 @@ html {
 
 body {
   font-size: 1.6rem;
+  background-image: url("../images/bg-pattern-top-mobile.svg"),
+    url("../images/bg-pattern-bottom-mobile.svg");
+  background-position: top, bottom;
+  background-size: contain;
+  background-repeat: no-repeat;
+  font-family: "Spartan", sans-serif;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 }
