--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -18,6 +18,7 @@ html {
 }
 
 body {
+  min-height: 100vh;
   font-size: 1.6rem;
   background-image: url("../images/bg-pattern-top-mobile.svg"),
     url("../images/bg-pattern-bottom-mobile.svg");
@@ -29,4 +30,16 @@ body {
   align-items: center;
   justify-content: center;
   flex-direction: column;
+  @media (min-width: 900px) {
+    background-image: url("../images/bg-pattern-top-desktop.svg"),
+      url("../images/bg-pattern-bottom-desktop.svg");
+    background-size: 40%, 30%;
+    background-position: top -23% left -9%, bottom right -80%;
+  }
+  @media (min-width: 1140px) {
+    background-image: url("../images/bg-pattern-top-desktop.svg"),
+      url("../images/bg-pattern-bottom-desktop.svg");
+    background-size: 50%, 80%;
+    background-position: top -23% left -9%, bottom right -30%;
+  }
 }
