--- a/scss/_component.scss
+++ b/scss/_component.scss
@@ -1,5 +1,6 @@
 .content {
-  padding: 1rem 1rem;
+  padding: 1rem;
+  margin: 7rem 0;
 
   &__wrapper {
     text-align: center;
@@ -11,17 +12,24 @@
   &__text {
     @media (min-width: 1140px) {
       width: 50%;
+      padding: 0 5rem;
+      padding-left: 0;
+      text-align: left;
     }
   }
 
   &__heading {
-    color: $color-primary--dark;
-    padding: 0 2rem;
+    color: #502050;
+    padding: 0 3rem;
     margin-top: 2rem;
     margin-bottom: 2rem;
     font-weight: 700;
-    font-size: 2.95rem;
-    line-height: 3rem;
+    font-size: 3rem;
+    line-height: 5rem;
+    @media (min-width: 1140px) {
+      font-size: 4.5rem;
+      padding: 0;
+    }
   }
 
   &__paragraph {
@@ -29,12 +37,16 @@
     font-weight: 400;
     font-size: 1.4rem;
     line-height: 2.5rem;
+    @media (min-width: 1140px) {
+      padding-right: 7rem;
+    }
   }
 
   &__reviews {
-    margin: 5rem 0;
+    // margin: 5rem 0;
     @media (min-width: 1140px) {
       width: 50%;
+      padding-top: 2rem;
     }
   }
 
@@ -45,9 +57,20 @@
     border-radius: 1rem;
     @media (min-width: 1140px) {
       display: flex;
-      justify-content: center;
+      justify-content: flex-start;
       align-items: center;
-      width: 70%;
+      width: 80%;
+      padding: 1.7rem 4rem;
+      &-first {
+      }
+
+      &-second {
+        transform: translateX(5.5rem);
+      }
+
+      &-third {
+        transform: translateX(10.5rem);
+      }
     }
   }
 
@@ -70,18 +93,38 @@
   }
 
   &__cards {
-    @media (min-width: 1440px) {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    margin-top: 7rem;
+
+    @media (min-width: 900px) {
       display: flex;
+      flex-direction: column;
+      gap: 2rem;
+    }
+    @media (min-width: 1440px) {
+      flex-direction: row;
+      gap: 2rem;
     }
   }
 
   &__card {
     background-color: $color-primary--dark;
-    margin-bottom: 2rem;
+    // margin-bottom: 3rem;
     border-radius: 1rem;
     padding: 3rem;
     @media (min-width: 1140px) {
-      margin-right: 1rem;
+      &-first {
+      }
+
+      &-second {
+        transform: translateY(2rem);
+      }
+
+      &-third {
+        transform: translateY(4rem);
+      }
     }
     &-author {
       display: flex;
@@ -115,26 +158,26 @@
 
   &__message {
     color: $color-secondary;
-    font-size: 1.3rem;
+    font-size: 1.25rem;
     line-height: 2.3rem;
   }
+}
 
-  .attribution {
-    color: #000;
-    font-size: 1rem;
-    text-align: center;
-    margin: 2rem 0 1rem 0;
+.attribution {
+  color: #000;
+  font-size: 1rem;
+  text-align: center;
+  margin: 2rem 0 0 0;
 
-    &__link:link,
-    &__link:visited {
-      //   color: $color-tertiary--light;
-      text-transform: uppercase;
-      transition: all 0.2s;
-    }
+  &__link:link,
+  &__link:visited {
+    color: $color-primary--light;
+    text-transform: uppercase;
+    transition: all 0.2s;
+  }
 
-    &__link:hover,
-    &__link:active {
-      color: $color-primary;
-    }
+  &__link:hover,
+  &__link:active {
+    color: $color-primary;
   }
 }
