--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -1,7 +1,12 @@
 .container {
   width: 90%;
   max-width: 400px;
+
+  @media (min-width: 900px) {
+    max-width: 700px;
+  }
+
   @media (min-width: 1140px) {
-    max-width: 1200px;
+    max-width: 1100px;
   }
 }
