--- a/css/style.css
+++ b/css/style.css
@@ -158,7 +158,7 @@ body {
   color: #000;
   font-size: 1rem;
   text-align: center;
-  margin: 2rem 0 0 0; }
+  margin: 2rem 0 1rem 0; }
   .attribution__link:link, .attribution__link:visited {
     color: #937b92;
     text-transform: uppercase;
