--- a/scss/_component.scss
+++ b/scss/_component.scss
@@ -167,7 +167,7 @@
   color: #000;
   font-size: 1rem;
   text-align: center;
-  margin: 2rem 0 0 0;
+  margin: 2rem 0 1rem 0;
 
   &__link:link,
   &__link:visited {
