--- a/scss/_component.scss
+++ b/scss/_component.scss
@@ -43,7 +43,6 @@
   }
 
   &__reviews {
-    // margin: 5rem 0;
     @media (min-width: 1140px) {
       width: 50%;
       padding-top: 2rem;
@@ -61,8 +60,6 @@
       align-items: center;
       width: 80%;
       padding: 1.7rem 4rem;
-      &-first {
-      }
 
       &-second {
         transform: translateX(5.5rem);
@@ -111,13 +108,9 @@
 
   &__card {
     background-color: $color-primary--dark;
-    // margin-bottom: 3rem;
     border-radius: 1rem;
     padding: 3rem;
     @media (min-width: 1140px) {
-      &-first {
-      }
-
       &-second {
         transform: translateY(2rem);
       }
@@ -140,9 +133,6 @@
     }
   }
 
-  &__fullname {
-  }
-
   &__name {
     color: $color-secondary--light;
     font-size: 1.2rem;
@@ -163,21 +153,21 @@
   }
 }
 
-.attribution {
-  color: #000;
-  font-size: 1rem;
-  text-align: center;
-  margin: 2rem 0 1rem 0;
+// .attribution {
+//   color: #000;
+//   font-size: 1rem;
+//   text-align: center;
+//   margin: 2rem 0 1rem 0;
 
-  &__link:link,
-  &__link:visited {
-    color: $color-primary--light;
-    text-transform: uppercase;
-    transition: all 0.2s;
-  }
+//   &__link:link,
+//   &__link:visited {
+//     color: $color-primary--light;
+//     text-transform: uppercase;
+//     transition: all 0.2s;
+//   }
 
-  &__link:hover,
-  &__link:active {
-    color: $color-primary;
-  }
-}
+//   &__link:hover,
+//   &__link:active {
+//     color: $color-primary;
+//   }
+// }
