--- a/scss/_component.scss
+++ b/scss/_component.scss
@@ -153,21 +153,21 @@
   }
 }
 
-// .attribution {
-//   color: #000;
-//   font-size: 1rem;
-//   text-align: center;
-//   margin: 2rem 0 1rem 0;
+.attribution {
+  color: #000;
+  font-size: 1rem;
+  text-align: center;
+  margin: 2rem 0 1rem 0;
 
-//   &__link:link,
-//   &__link:visited {
-//     color: $color-primary--light;
-//     text-transform: uppercase;
-//     transition: all 0.2s;
-//   }
+  &__link:link,
+  &__link:visited {
+    color: $color-primary--light;
+    text-transform: uppercase;
+    transition: all 0.2s;
+  }
 
-//   &__link:hover,
-//   &__link:active {
-//     color: $color-primary;
-//   }
-// }
+  &__link:hover,
+  &__link:active {
+    color: $color-primary;
+  }
+}
